--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: npm install && npm webpack
+        run: |
+          npm install
+          npm run build
+          
+  
+  test:
 
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x, 16.x]
@@ -27,6 +37,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: npm install and test
+      run: |
+        npm install
+        npm build
+      env:
+        CI: true
