--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,6 +49,6 @@ jobs:
     - name: npm install and test
       run: |
         npm install
-        npm build
+        npm test
       env:
         CI: true
